software/stacks/voting-app/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voting-app
  labels:
    hostk8s.app: voting-app
