software/stacks/voting-app/app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: voting-app
  labels:
    app: db
    hostk8s.app: voting-app
    hostk8s.component: database
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  type: ClusterIP
