software/stacks/voting-app/app/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting-app
  labels:
    app: vote
    hostk8s.app: voting-app
    hostk8s.component: vote-service
spec:
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    protocol: TCP
    name: http
  type: NodePort
